tests/ui/nll/closure-requirements/region-lbr1-does-not-outlive-ebr2.stderr
error: lifetime may not live long enough
  --> $DIR/region-lbr1-does-not-outlive-ebr2.rs:9:5
   |
LL | fn foo<'a, 'b>(x: &'a u32, y: &'b u32) -> &'b u32 {
   |        --  -- lifetime `'b` defined here
   |        |
   |        lifetime `'a` defined here
LL |     &*x
   |     ^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`

error: aborting due to 1 previous error

